# PortAudioUnity

./: .gitignore  CMakeLists.txt  README.md
include/: SimpleAudioAPI.h  SimpleAudioPlayer.h  SimpleAudioTypes.h  TempBuffer.h
lib/: portaudio.lib
otherWindowsStuff/: CMakeLists.txt
otherWindowsStuff/src/: PortAudioDemo.cpp
otherWindowsStuff/unity/: AudioInitializer.cs  SimpleAudioPlayerInterface.cs
src/: SimpleAudioPlayer.cpp  main.cpp
src/unity/: AudioInitializer.cs  AudioInitializerEditor.cs  RunSimpleAudioPlayer.cs  SimpleAudioPlayerInterface.cs
